--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.10.0",
     "debug": "~2.6.9",
     "digitopia": "git+https://github.com/mediapolis/digitopia.git#jquery-3-working",
     "express": "~4.16.0",
     "express-validator": "^6.2.0",
+    "helmet": "^3.21.2",
+    "helmet-csp": "^2.9.4",
     "http-errors": "~1.6.2",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
