--- a/package.json
+++ b/package.json
@@ -72,6 +72,10 @@
     "grunt-terser": "^0.1.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
+    "prosemirror-example-setup": "^1.1.2",
+    "prosemirror-markdown": "^1.4.2",
+    "prosemirror-state": "^1.3.2",
+    "prosemirror-view": "^1.13.4",
     "pug-cli": "^1.0.0-alpha6",
     "sass-loader": "^8.0.0",
     "sequelize-cli": "^5.5.1",
